--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc_concurrency: ^0.2.0
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  http: ^0.13.0
+  stream_transform: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,8 +43,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  bloc_test: ^9.0.0
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
+  very_good_analysis: ^3.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
